--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -10,6 +10,7 @@
   <body>
     <div class="app-container">
       <h1>💬 Flask Message Board</h1>
+      <p style="text-align: center; color: #666; font-size: 0.9em; margin-top: -10px;">Served by: {{ hostname }}</p>
 
       <div class="message-box" id="messages">
         {% if messages %} {% for msg, time in messages %}
